# syft-data-science

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README2.md  TODO.md  justfile  pyproject.toml  run.sh
.github/workflows/: e2e-tests.yml  pr-tests-base.yml  pr-tests-rds.yml  pr-tests-syft-data-science.yml  run-tests.yml
docs/: state_diagram.md
exp/: pyproject.toml
exp/addition/models/capnp/: addition.capnp
exp/addition/models/capnp/python/: addition_service_capnp.py
exp/addition/models/jsonschema/: addition.schema.json  json-schema-readme.md  model.py
exp/addition/models/jsonschema/pydantic/: addition.py
exp/addition/models/jsonschema/python/: addition.py
exp/addition/models/protobuf/: addition.proto  proto-readme.md
exp/addition/models/protobuf/javascript/: compiled.d.ts  compiled.js  test.js
exp/addition/models/protobuf/python/: addition_pb2.py  addition_pb2.pyi  addition_service_proto.py
jobs_folder_submission_test/: generate_dataset.py  job_folder_submission.ipynb  job_folder_submission.py
notebooks/: basic-flow.ipynb  dataset_create.ipynb  dataset_do.ipynb  dataset_ds.ipynb  ds_submit_job.ipynb  llm_review copy.ipynb  llm_review.ipynb  new_llm_review.ipynb  prototype.ipynb  rds-client-planning.ipynb  rds-client-test.py  rds-client.ipynb  rds-data-server.py  store_prototype.ipynb  test.ipynb
notebooks/api/: dataset_do.ipynb  dataset_ds.ipynb
notebooks/data/census/: mock.csv  private_census.csv
notebooks/data/med_MNIST/: README.md
notebooks/internal/: full_flow_folder.ipynb  store querying.ipynb  store_querying.ipynb
notebooks/quickstart/: do_flow.ipynb  ds_flow.ipynb  full_flow-custom_functions.ipynb  full_flow-folder.ipynb  full_flow.ipynb  full_flow.py  full_flow_functions.ipynb
notebooks/quickstart/syftbox_functions/: custom_code.py
runtimes/: bash.Dockerfile  entrypoint.sh  fl_tabular.Dockerfile  python.Dockerfile  python_test.Dockerfile  syft_flwr.Dockerfile
scripts/: data_prep.ipynb  jobs.py
scripts/ds_dir/: ds.py
src/syft_rds/: __init__.py
src/syft_rds/client/: exceptions.py  job_runner.py  local_store.py  rds_client.py  rpc.py  utils.py
src/syft_rds/client/local_stores/: dataset.py  job.py
src/syft_rds/client/local_stores/dataset/: store.py
src/syft_rds/client/local_stores/dataset/managers/: files.py  path.py  url.py
src/syft_rds/client/rds_clients/: base.py  custom_function.py  dataset.py  job.py  jobs.py  runtime.py  user_code.py
src/syft_rds/models/: __init__.py  base.py  custom_function_models.py  dataset_models.py  job_models.py  models.py  runtime_models.py
src/syft_rds/server/: app.py  user_file_service.py
src/syft_rds/server/routers/: job_router.py  runtime_router.py  user_code_router.py
src/syft_rds/server_fsb/: app.py  dependencies.py
src/syft_rds/server_fsb/routers/: job_router.py  runtime_router.py  user_code_router.py
src/syft_rds/syft_runtime/: __init__.py  main.py  mounts.py
src/syft_rds/utils/: resources.py
syft-rds/: README.md  pyproject.toml
syft-rds/src/syft_rds/: __init__.py  consts.py  orchestra.py  specs.py  store.py
syft-rds/src/syft_rds/api/: api.py
syft-rds/src/syft_rds/assets/: adjectives.txt  data_access_template.py.jinja
syft-rds/src/syft_rds/client/: client_registry.py  connection.py  local_store.py  rds_client.py  rpc.py  rpc_client.py  setup.py  syft_permission.py  utils.py
syft-rds/src/syft_rds/client/interfaces/: __init__.py  base.py  code.py  dataset.py  jobs.py  runtime.py
syft-rds/src/syft_rds/client/local_stores/: base.py  dataset.py  jobs.py  runtime.py  user_code.py
syft-rds/src/syft_rds/client/rds_clients/: base.py  dataset.py  jobs.py  runtime.py  user_code.py
syft-rds/src/syft_rds/client/rpc_clients/: base.py  dataset.py  jobs.py  runtime.py  user_code.py
syft-rds/src/syft_rds/connection/: connection.py
syft-rds/src/syft_rds/db/: dataset_db.py  db.py  multi_file_db.py  single_file_db.py  store.py
syft-rds/src/syft_rds/jupyter_utils/: table_utils.py  tabulator.py  types.py
syft-rds/src/syft_rds/models/: __init__.py  action_object.py  base.py  base_model.py  code.py  dataset.py  displayable.py  formatter.py  job.py  models.py
syft-rds/src/syft_rds/runtime/: __init__.py
syft-rds/src/syft_rds/server/: app.py  jobs.py  router.py  store.py  user_code.py  user_file_service.py
syft-rds/src/syft_rds/server/routers/: dataset_router.py  job_router.py  runtime_router.py  user_code_router.py
syft-rds/src/syft_rds/service/: code_service.py  context.py  dataset_service.py  job_service.py  request_service.py  service.py
syft-rds/src/syft_rds/services/dataset/: dataset.schema.json  dataset_model.py  dataset_models.py  dataset_service.py
syft-rds/src/syft_rds/services/jobs/: job_models.py
syft-rds/src/syft_rds/store/: __init__.py  rds_store.py  store.py
syft-rds/src/syft_rds/syft_runtime/: config.py  main.py
syft-rds/src/syft_rds/utils/: js_display.py  llm_review.py  name_generator.py  paths.py  resources.py
syft-rds/src/syft_runtime/: main.py
syft-rds/tests/: conftest.py  mocks.py  utils.py
syft-rds/tests/e2e/: conftest.py  dataset_test.py  full_flow_test.py
syft-rds/tests/integration/: crud_test.py  dataset_test.py  execution_test.py  rdsclient_test.py  rpc_test.py  test_crud.py  test_execution.py  test_job.py
syft-rds/tests/integration/assets/ds/: ds.py
syft-rds/tests/unit/: dataset_test.py  store_test.py
syft_data_science/: __init__.py
syft_runtime/: Dockerfile  Justfile  README.md  pyproject.toml
syft_runtime/example/ds/function1/: main.py
syft_runtime/syft_runtime/: main.py
syftbox_functions/: custom_code.py
tests/: conftest.py  syft_data_science_import_test.py  utils.py
tests/assets/ds/: ds.py  ds_timeout.py
tests/integration/: crud_test.py  execution_test.py  jobs_submit_test.py
tests/unit/: dataset_test.py
