[project]
name = "syft-data-science"
version = "0.1.0"
description = "Doing remote data science with SyftBox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "loguru>=0.7.3",
  "pydantic[email]>=2.10.4",
  "rich>=13.9.4",
  "syft-core==0.2.5",
  "syft-event==0.2.7",
  "syft-rpc==0.2.4",
  "typing-extensions>=4.14.0",
  "pyyaml>=6.0.2",
  "typer>=0.12.5",
  "nh3>=0.2.21",
  "jinja2>=3.1.6",
  "ipython>=8.18.1",
  "syft-datasets",
  "syft-rds",
  "syft-runtimes",
]

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "jupyter>=1.1.1",
  "pandas>=1.4.0",
  "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
syft-datasets = { workspace = true }
syft-rds = { workspace = true }
syft-runtimes = { workspace = true }
