[project]
name = "syft-data-science"
version = "0.1.0"
description = "Doing remote data science with SyftBox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "syft-datasets",
  "syft-rds",
  "syft-runtimes",
  "syft-notebook-ui",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "jupyter>=1.1.1",
    "pandas>=1.4.0",
    "httpx>=0.28.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
syft-datasets = { workspace = true }
syft-rds = { workspace = true }
syft-runtimes = { workspace = true }
syft-notebook-ui = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
