[project]
name = "syft-rds"
version = "0.1.6"
description = "Doing remote data science with SyftBox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "syft-core>=0.2.8",
  "syft-event",
  "loguru>=0.7.3",
  "pydantic[email]>=2.11.7",
  "rich>=14.1.0",
  "typing-extensions>=4.14.1",
  "pyyaml>=6.0.2",
  "typer>=0.16.1",
  "nh3>=0.3.0",
  "jinja2>=3.1.6",
  "ipython>=8.18.1",
]

[tool.uv.sources]
syft-event = { path = "../syft-extras/packages/syft-event" }

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "jupyter>=1.1.1",
  "pandas>=2.3.2",
  "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md"]
exclude = ["src/**/__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["src/syft_rds"]
only-include = ["src/syft_rds"]  # no need for pyproject.toml and README.md for wheel
exclude = ["src/syft_rds/**/__pycache__"]

[project.scripts]
syft-rds = "syft_rds.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
