[project]
name = "syft-rds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "pydantic[email]>=2.10.4",
    "rich>=13.9.4",
    "syft-core",
    "syft-event",
    "syft-rpc",
    "syftbox",
    "typing-extensions>=4.12.2",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
    "jupyter>=1.1.1",
    "nh3>=0.2.21",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "pandas>=1.4.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", rev = "main" }
syftbox = { git = "https://github.com/OpenMined/syft", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syft_rds"]
include = ["src/syft_rds/assets/*"]

[project.scripts]
syft-rds = "syft_rds.cli:app"
