[project]
name = "syft-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polar>=0.0.127",
    "psutil>=6.1.1",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
syft_runtime = "syft_runtime:app"
